--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-    background: url(/Branding-Guidelines/Bg-gradient.png);
+    background: url(../CSSWENG-G1-1/Branding-Guidelines/Bg-gradient.png);
     padding: 20px 0;
     color: white;
 }
