--- a/styles.css
+++ b/styles.css
@@ -35,8 +35,26 @@
 
 :root {
     margin: 0;
-    font-family: 'Telegraf', sans-serif;
+    font-family: 'Telegraf', sans-serif 'Garet', sans-serif;
     background-color: #f8f8f8;
+    --color1: #FEFEFE;
+    --color2: #000000;
+    --color3: #F69C42;
+    --color4: #64A4A2;
+    --color5: #3B223A;
+    --color6: #DD3B5E;
+    background-image: linear-gradient(135deg, #f69c42, #64a4a2);
+}
+
+body {
+    position: relative;
+    overflow-x: hidden;
+    background-color: var(--color1);
+}
+
+body,
+html {
+    height: 100%;
 }
 
 .logo {
@@ -47,7 +65,7 @@
 
 header {
     background-size: cover;
-    color: black;
+    color: var(--color2);
     padding: 10px 0;
     margin-right: 250px;
 }
@@ -74,7 +92,7 @@ header p {
     vertical-align: middle;
 }
 
-hr.solid {
+hr.vertical-solid {
     border: none;
     border-left: 1px solid black;
     height: 50px;
@@ -90,7 +108,7 @@ hr.solid {
     background: url(../CSSWENG-G1-1/Branding-Guidelines/Bg-gradient.png);
     padding: 20px;
     background-size: cover;
-    color: white;
+    color: var(--color1);
 }
 
 .menu-icon {
@@ -102,7 +120,7 @@ hr.solid {
 .welcome-title {
     font-family: 'Garet', sans-serif;
     font-weight: bold;
-    color: black;
+    color: var(--color2);
     margin-bottom: 20px;
     font-size: 28px;
 }
@@ -141,14 +159,14 @@ hr.solid {
 
 .search-container button {
     border-radius: 0 25px 25px 0 !important;
-    background-color: white;
+    background-color: var(--color1);
     border: 0.5px solid rgb(188, 187, 187);
     outline: none;
 }
 
 .bi.bi-search {
     font-size: 23px;
-    color: black;
+    color: var(--color2);
 }
 
 .card {
@@ -160,8 +178,13 @@ hr.solid {
     width: 90%;
     padding: 5px;
     overflow: hidden;
-    background-color: white;
+    background-color: var(--color1);
     border: 1px solid transparent;
+    transition: background-color 0.3s ease;
+}
+
+.card:hover {
+    background-color: rgb(231, 229, 229);
 }
 
 .card img {
@@ -170,7 +193,7 @@ hr.solid {
 }
 
 .card h5 {
-    color: black;
+    color: var(--color2);
     margin: 10px 0;
     font-size: 18px;
 }
@@ -199,7 +222,7 @@ hr.solid {
 }
 
 .card-title {
-    color: #f1f1f1;
+    color: var(--color1);
     font-weight: bold;
     margin-top: 1rem;
 }
@@ -211,17 +234,6 @@ hr.solid {
     color: #a0aec0;
     line-height: 1.5;
     font-size: 0.875rem;
-}
-
-body {
-    position: relative;
-    overflow-x: hidden;
-    background-color: ##FEFEFE;
-}
-
-body,
-html {
-    height: 100%;
 }
 
 .nav .open>a,
@@ -259,7 +271,7 @@ html {
     margin-left: -220px;
     overflow-y: auto;
     overflow-x: hidden;
-    background: #64A4A2;
+    background: var(--color4);
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -293,8 +305,27 @@ html {
 
 /*-------------------------------*/
 
+.navbar-solid {
+    height: 0.3px;
+    background-color: var(--color1);
+    margin-bottom: 10px;
+}
+
 .navbar {
+    font-family: 'Garet', sans-serif;
     padding: 0;
+}
+
+.nav.sidebar-nav {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    padding-bottom: 10px;
+}
+
+.nav.sidebar-nav .logout-link {
+    font-size: medium;
+    margin-top: 310px;
 }
 
 .sidebar-nav {
@@ -311,6 +342,7 @@ html {
     line-height: 20px;
     display: inline-block;
     width: 100%;
+    margin-top: 15px;
 }
 
 .sidebar-nav li:before {
@@ -321,7 +353,7 @@ html {
     z-index: -1;
     height: 100%;
     width: 3px;
-    background-color: #64A4A2;
+    background-color: var(--color4);
     -webkit-transition: width .2s ease-in;
     -moz-transition: width .2s ease-in;
     -ms-transition: width .2s ease-in;
@@ -357,7 +389,7 @@ html {
 .sidebar-nav li.open a:hover,
 .sidebar-nav li.open a:active,
 .sidebar-nav li.open a:focus {
-    color: #fff;
+    color: var(--color1);
     text-decoration: none;
     background-color: transparent;
 }
@@ -373,7 +405,7 @@ html {
 .sidebar-brand {
     height: 65px;
     position: relative;
-    background: #64A4A2;
+    background: var(--color4);
     padding-top: 1em;
 }
 
@@ -382,7 +414,7 @@ html {
 }
 
 .sidebar-brand a:hover {
-    color: #fff;
+    color: var(--color1);
     text-decoration: none;
 }
 
@@ -393,155 +425,10 @@ html {
     margin: 0;
     border-radius: 0;
     border: none;
-    background-color: #64A4A2;
+    background-color: var(--color4);
     box-shadow: none;
 }
 
 .dropdown-menu.show {
     top: 0;
 }
-
-
-/*-------------------------------*/
-
-
-/*       Hamburger-Cross         */
-
-
-/*-------------------------------*/
-
-.hamburger {
-    position: fixed;
-    top: 20px;
-    z-index: 999;
-    display: block;
-    width: 32px;
-    height: 32px;
-    margin-left: 15px;
-    background: transparent;
-    border: none;
-}
-
-.hamburger:hover,
-.hamburger:focus,
-.hamburger:active {
-    outline: none;
-}
-
-.hamburger.is-closed:before {
-    content: '';
-    display: block;
-    width: 100px;
-    font-size: 14px;
-    color: #fff;
-    line-height: 32px;
-    text-align: center;
-    opacity: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-closed:hover:before {
-    opacity: 1;
-    display: block;
-    -webkit-transform: translate3d(-100px, 0, 0);
-    -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-closed .hamb-top,
-.hamburger.is-closed .hamb-middle,
-.hamburger.is-closed .hamb-bottom,
-.hamburger.is-open .hamb-top,
-.hamburger.is-open .hamb-middle,
-.hamburger.is-open .hamb-bottom {
-    position: absolute;
-    left: 0;
-    height: 4px;
-    width: 100%;
-}
-
-.hamburger.is-closed .hamb-top,
-.hamburger.is-closed .hamb-middle,
-.hamburger.is-closed .hamb-bottom {
-    background-color: #1a1a1a;
-}
-
-.hamburger.is-closed .hamb-top {
-    top: 5px;
-    -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-closed .hamb-middle {
-    top: 50%;
-    margin-top: -2px;
-}
-
-.hamburger.is-closed .hamb-bottom {
-    bottom: 5px;
-    -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-closed:hover .hamb-top {
-    top: 0;
-    -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-closed:hover .hamb-bottom {
-    bottom: 0;
-    -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-open .hamb-top,
-.hamburger.is-open .hamb-middle,
-.hamburger.is-open .hamb-bottom {
-    background-color: white;
-}
-
-.hamburger.is-open .hamb-top,
-.hamburger.is-open .hamb-bottom {
-    top: 50%;
-    margin-top: -2px;
-}
-
-.hamburger.is-open .hamb-top {
-    -webkit-transform: rotate(45deg);
-    -webkit-transition: -webkit-transform .2s cubic-bezier(.73, 1, .28, .08);
-}
-
-.hamburger.is-open .hamb-middle {
-    display: none;
-}
-
-.hamburger.is-open .hamb-bottom {
-    -webkit-transform: rotate(-45deg);
-    -webkit-transition: -webkit-transform .2s cubic-bezier(.73, 1, .28, .08);
-}
-
-.hamburger.is-open:before {
-    content: '';
-    display: block;
-    width: 100px;
-    font-size: 14px;
-    color: #fff;
-    line-height: 32px;
-    text-align: center;
-    opacity: 0;
-    -webkit-transform: translate3d(0, 0, 0);
-    -webkit-transition: all .35s ease-in-out;
-}
-
-.hamburger.is-open:hover:before {
-    opacity: 1;
-    display: block;
-    -webkit-transform: translate3d(-100px, 0, 0);
-    -webkit-transition: all .35s ease-in-out;
-}
-
-
-/*-------------------------------*/
-
-
-/*            Overlay            */
-
-
-/*-------------------------------*/
